--- a/services.html
+++ b/services.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="DJmaxZPL4Y sous le vrai nom de ZUMSTEIN Maxime, je suis un jeune développeur passioné de 16 ans. Ayant commencé à apprendre le HTML ainsi que le CSS lorsque j'avais seulement une douzaine d'année je me suis orienté vers le language JAVA en créant mes premiers plugins sur le célèbre jeu composé uniquement de cubes intitulé Minecraft. Depuis ce moment j'ai découvert une vraie passion pour l'informatique et plus particulièrement le développement sous JAVA. Je décide donc de mettre mais connaissances sur internet afin de vous proposer de créer ce dont vous avez besoin. Toutes mes créations sont gratuites puisque je les fais dans le but de m'améliorer. Alors n'hésitez pas à passer sur la page Mes services si vous avez besoin d'un logiciel, de plugins Minecraft ou même d'un site web.">
+    <meta name="author" content="DJmaxZPL4Y">
     <title>Services | DJmaxZPL4Y</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -44,8 +44,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <h1>Services</h1>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
+                    <h1>Mes services</h1>
+                    <p>Si vous avez besoin d'un logiciel, d'un plugin Minecraft ou d'un site web ou autre vous êtes sur la bonne page</p>
                 </div>
                 <div class="col-sm-6">
                     <ul class="breadcrumb pull-right">
@@ -62,11 +62,12 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="center gap">
-                        <h2>What we do</h2>
-                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                        <h2>Page en construction !</h2>
+                        <p>Désolé mais cette page est actuellement entrain d'être créée.</p>
                     </div>                
                 </div>
             </div>
+            <!--
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <div class="media">
@@ -79,6 +80,7 @@
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
+                <!--
                 <div class="col-md-4 col-sm-6">
                     <div class="media">
                         <div class="pull-left">
@@ -90,6 +92,7 @@
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
+                <!--
                 <div class="col-md-4 col-sm-6">
                     <div class="media">
                         <div class="pull-left">
@@ -101,7 +104,8 @@
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
-            </div><!--/.row-->
+            <!--</div><!--/.row-->
+            <!--
             <div class="gap"></div>
             <div class="row">
                 <div class="col-md-4 col-sm-6">
@@ -115,6 +119,7 @@
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
+                <!--
                 <div class="col-md-4 col-sm-6">
                     <div class="media">
                         <div class="pull-left">
@@ -126,6 +131,7 @@
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
+                <!--
                 <div class="col-md-4 col-sm-6">
                     <div class="media">
                         <div class="pull-left">
@@ -137,7 +143,8 @@
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
-            </div><!--/.row-->
+            <!--</div><!--/.row-->
+            <!--
             <hr>
             <div class="row">
                 <div class="col-lg-12">
@@ -161,87 +168,33 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </section><!--/#services-->
 
     <section id="bottom" class="wet-asphalt">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <h4>About Us</h4>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
-                    <p>Pellentesque habitant morbi tristique senectus.</p>
+                <div class="col-md-6 col-sm-6 ">
+                    <h4>A propos de moi</h4>
+                    <p>Jeune développeur de 16 ans il saura satisfaire vos besoins. Développant principalement en JAVA il peut très bien vous créer un logiciel de A à Z ou encore de vous créer des plugins pour le jeu Minecraft</p>
+                    <p>N'hésitez pas à passer par la page Mes créations ou encore Mes services.</p>
                 </div><!--/.col-md-3-->
 
-                <div class="col-md-3 col-sm-6">
-                    <h4>Company</h4>
+                <div class="col-md-6 col-sm-6">
+                    <h4>DJmaxZPL4Y</h4>
                     <div>
                         <ul class="arrow">
-                            <li><a href="#">The Company</a></li>
-                            <li><a href="#">Our Team</a></li>
-                            <li><a href="#">Our Partners</a></li>
-                            <li><a href="#">Our Services</a></li>
-                            <li><a href="#">Faq</a></li>
-                            <li><a href="#">Conatct Us</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms of Use</a></li>
+                            <li><a href="#">Mes services</a></li>
+                            <li><a href="#">Retours des clients</a></li>
+                            <li><a href="#">Page Facebook</a></li>
+                            <li><a href="#">Page Youtube</a></li>
+                            <li><a href="#">Github</a></li>
+                            <li><a href="#">Termes d'utilisations</a></li>
                             <li><a href="#">Copyright</a></li>
                         </ul>
                     </div>
-                </div><!--/.col-md-3-->
-
-                <div class="col-md-3 col-sm-6">
-                    <h4>Latest Blog</h4>
-                    <div>
-                        <div class="media">
-                            <div class="pull-left">
-                                <img src="images/blog/thumb1.jpg" alt="">
-                            </div>
-                            <div class="media-body">
-                                <span class="media-heading"><a href="#">Pellentesque habitant morbi tristique senectus</a></span>
-                                <small class="muted">Posted 17 Aug 2013</small>
-                            </div>
-                        </div>
-                        <div class="media">
-                            <div class="pull-left">
-                                <img src="images/blog/thumb2.jpg" alt="">
-                            </div>
-                            <div class="media-body">
-                                <span class="media-heading"><a href="#">Pellentesque habitant morbi tristique senectus</a></span>
-                                <small class="muted">Posted 13 Sep 2013</small>
-                            </div>
-                        </div>
-                        <div class="media">
-                            <div class="pull-left">
-                                <img src="images/blog/thumb3.jpg" alt="">
-                            </div>
-                            <div class="media-body">
-                                <span class="media-heading"><a href="#">Pellentesque habitant morbi tristique senectus</a></span>
-                                <small class="muted">Posted 11 Jul 2013</small>
-                            </div>
-                        </div>
-                    </div>  
-                </div><!--/.col-md-3-->
-
-                <div class="col-md-3 col-sm-6">
-                    <h4>Address</h4>
-                    <address>
-                        <strong>Twitter, Inc.</strong><br>
-                        795 Folsom Ave, Suite 600<br>
-                        San Francisco, CA 94107<br>
-                        <abbr title="Phone">P:</abbr> (123) 456-7890
-                    </address>
-                    <h4>Newsletter</h4>
-                    <form role="form">
-                        <div class="input-group">
-                            <input type="text" class="form-control" autocomplete="off" placeholder="Enter your email">
-                            <span class="input-group-btn">
-                                <button class="btn btn-danger" type="button">Go!</button>
-                            </span>
-                        </div>
-                    </form>
-                </div> <!--/.col-md-3-->
+                </div><!--/.col-md-6-->
             </div>
         </div>
     </section><!--/#bottom-->
